--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "stripe/stripe-php": "^7.100",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
